RESOLVED FIXED 153652
Modern IDB: Fix logging that overwhelms python with strings of excessive length
https://bugs.webkit.org/show_bug.cgi?id=153652
Summary Modern IDB: Fix logging that overwhelms python with strings of excessive length
Brady Eidson
Reported 2016-01-29 09:22:58 PST
Modern IDB: Fix layout tests that overwhelm python with strings of excessive length This happens only in debug builds, but debug builds are a useful test config!
Attachments
Patch v1 (4.71 KB, patch)
2016-01-29 10:05 PST, Brady Eidson
no flags
Patch v2 - Now with more style (4.73 KB, patch)
2016-01-29 10:53 PST, Brady Eidson
thorton: review+
commit-queue: commit-queue-
Brady Eidson
Comment 1 2016-01-29 09:23:17 PST
(In reply to comment #0) > Modern IDB: Fix layout tests that overwhelm python with strings of excessive > length > > This happens only in debug builds, but debug builds are a useful test config! Additionally, only debug builds *with* IndexedDB logging enabled. Again, a useful test config.
Brady Eidson
Comment 2 2016-01-29 10:03:58 PST
Modern IDB: Fix logging that overwhelms python with strings of excessive length
Brady Eidson
Comment 3 2016-01-29 10:05:26 PST
Created attachment 270219 [details] Patch v1
WebKit Commit Bot
Comment 4 2016-01-29 10:07:18 PST
Attachment 270219 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/IDBKeyData.cpp:264: Non-label code inside switch statements should be indented. [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 5 2016-01-29 10:53:10 PST
Created attachment 270223 [details] Patch v2 - Now with more style
WebKit Commit Bot
Comment 6 2016-01-29 11:43:17 PST
Comment on attachment 270223 [details] Patch v2 - Now with more style Rejecting attachment 270223 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 270223, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: k1/TestExpectations Hunk #1 FAILED at 273. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/mac-wk1/TestExpectations.rej patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/Modules/indexeddb/IDBKeyData.cpp patching file Source/WebCore/Modules/indexeddb/IDBKeyRangeData.cpp Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Tim Horton']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/756317
Brady Eidson
Comment 7 2016-01-29 11:50:09 PST
Note You need to log in before you can comment on or make changes to this bug.