Modern IDB: Fix logging that overwhelms python with strings of excessive length. https://bugs.webkit.org/show_bug.cgi?id=153652

Reviewed by Tim Horton.

Source/WebCore:

No new tests (Two skipped tests now pass).

* Modules/indexeddb/IDBKeyData.cpp:
(WebCore::IDBKeyData::loggingString): Limit the length of the string.

* Modules/indexeddb/IDBKeyRangeData.cpp:
(WebCore::IDBKeyRangeData::loggingString): Limit the length of the string.

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/171720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195832 268f45cc-cd09-0410-ab3c-d52691b4dbfc